# rowan

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_function_pointer_table.py  rowan.nix  rowanc.nix  shell.nix  todo.md
headers/: rowan.h  rowan_runtime.h
libunwind/: Cargo.toml  build.rs  shell.nix  wrapper.h
libunwind/src/: common.rs  dynamic.rs  lib.rs  x86_64.rs
output/: Main.c
pool-box/: Cargo.toml
pool-box/src/: lib.rs  pool.rs  poolbox.rs
rowan/: Cargo.toml  build.rs  rowan.def
rowan-register-debug/: Cargo.toml
rowan-register-debug/src/: lib.rs  windows.rs
rowan-runtime/: Cargo.toml  build.rs
rowan-runtime/src/: context.rs  external.rs  lib.rs  main.rs  runtime.rs
rowan-runtime/src/context/: amd64.rs  interpreter.rs
rowan-runtime/src/context/amd64/: unix.rs
rowan-runtime/src/context/interpreter/: frame_vars.rs  stackframe.rs
rowan-runtime/src/runtime/: class.rs  core.rs  garbage_collection.rs  interface.rs  jit.rs  linker.rs  object.rs  tables.rs
rowan-runtime/src/runtime/core/: boxes.rs  strings.rs
rowan-runtime/src/runtime/tables/: class_table.rs  interface_table.rs  native_object_table.rs  object_table.rs  string_table.rs  symbol_table.rs  vtable.rs
rowan-test-files/: arraylist.rowan  base.rowan  derived.rowan  main.rowan
rowan-unwind/: Cargo.toml
rowan-unwind/src/: lib.rs  unix.rs  windows.rs
rowan/src/: fake_lock.rs  lib.rs  main.rs  runtime.rs
rowan/src/runtime/: class.rs  core.rs  garbage_collection.rs  jit.rs  linker.rs  object.rs  runtime.rs  rwlock.rs  stdlib.rs  tables.rs
rowan/src/runtime/tables/: class_table.rs  native_object_table.rs  object_table.rs  string_table.rs  symbol_table.rs  vtable.rs
rowan_shared/: Cargo.toml
rowan_shared/src/: bytecode.rs  classfile.rs  interfacefile.rs  interfaceimplfile.rs  lib.rs
rowan_shared/src/bytecode/: compiled.rs  linked.rs
rowanc/: Cargo.toml
rowanc/src/: ast.rs  backend.rs  main.rs  native.rs  parser.rs  trees.rs  typechecker.rs
rowanc/src/backend/: compiler.rs  compiler_utils.rs  pre_compilation.rs
rowanc/src/backend/compiler_utils/: partial_class.rs  partial_interface.rs  partial_interface_impl.rs
rowanc/src/backend/pre_compilation/: box_closure_captures.rs  fix_types_after_boxing.rs  inline_imports.rs  ir_conversion.rs  specialize_generics.rs
rowanc/src/parser/: grammar.lalrpop  lexer.rs  parser.rs
rowanc/src/trees/: ast.rs  ir.rs
std/: Console.c  Console.h  U64.rowan  collections.rowan  console.rowan
std/collections/: arraylist.rowan  deque.rowan
std/io/: IOLock.c  IOLock.h  iolock.rowan
stdlib/collections/: arraylist.rowan
