[workspace]
members = [ "rowan", "rowan_shared", "rowan-runtime", "rowanc", "rowan-unwind", "pool-box", "unwind-sys"]
resolver = "2"

[profile.release]
debug = true

[workspace.dependencies]
rowan_shared = { path = "rowan_shared" }
rowan-unwind = { path = "rowan-unwind" }
pool-box = { path = "pool-box" }
unwind-sys = { path = "unwind-sys" }
