[package]
name = "rowan-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rowan_shared = { workspace = true }
cranelift = "0.121.1"
cranelift-codegen = { version = "0.121.1", features = ["unwind"] }
cranelift-module = "0.121.1"
cranelift-jit = { version = "0.121.1", features = ["selinux-fix"] }
cranelift-native = "0.121.1"
paste = "1.0.15"
env_logger = "0.11.8"
log = "0.4.27"
libloading = "0.8.8"
rowan-unwind = { workspace = true }
libffi = "4.1.1"
libffi-sys = "3.3.2"