[package]
name = "rowan-unwind"
version = "0.1.0"
edition = "2024"

[dependencies]


[target.'cfg(unix)'.dependencies]
libunwind-sys = { git = "https://github.com/Ki11erRabbit/libunwind-sys" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32", "Win32_System", "Win32_System_Threading", "Win32_System_Diagnostics", "Win32_System_Diagnostics_Debug", "Win32_System_SystemInformation"] }